Construindo a lógica em BibliotecaController